--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,18 +34,21 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-
-      - name: Easy Zip Files
+      - name: Zip Release
         # You may pin to the exact commit or the version.
-        # uses: vimtor/action-zip@5f1c4aa587ea41db1110df6a99981dbe19cee310
-        uses: vimtor/action-zip@v1
+        # uses: TheDoctor0/zip-release@591e9b128012d3328db6043d0d0266c3ac27f9b5
+        uses: TheDoctor0/zip-release@0.6.1
         with:
-          # Files or directories to zip
-          files: .
-          # Name of output zip file
-          dest: macros.zip
-          # Whether to add subdirectories to simply zip all files to the root
-          recursive: true
+          # Filename for archive
+          filename: 'macros.zip'
+          # Base path for archive files
+          path: .
+          # Working directory before zipping
+          directory: .
+          # List of excluded files / directories
+          exclusions: '*.git* /*node_modules/* .editorconfig *.zip'
+          # Tool to use for archiving
+          type: zip
           
       - uses: actions/upload-artifact@v1
         with:
